# apertium-khk-kaz

./: .gitattributes  .gitignore  Makefile.am  README  apertium-khk-kaz.kaz.lexc  apertium-khk-kaz.khk-kaz.dix  apertium-khk-kaz.khk.lexc  apertium-khk-kaz.khk.twol  configure.ac  copystuffover.sh  modes.xml  update-morphs.bash  wiki-tests.sh
test/: kaz-khk-pending-chunker-expected.txt  kaz-khk-pending-chunker2-expected.txt  kaz-khk-pending-disam-expected.txt  kaz-khk-pending-generator-expected.txt  kaz-khk-pending-input.txt  kaz-khk-pending-lex-expected.txt  kaz-khk-pending-morph-expected.txt  kaz-khk-pending-postgen-expected.txt  kaz-khk-pending-postgen-gold.txt  kaz-khk-pending-pretransfer-expected.txt  khk-kaz-pending-chunker-expected.txt  khk-kaz-pending-chunker2-expected.txt  khk-kaz-pending-disam-expected.txt  khk-kaz-pending-generator-expected.txt  khk-kaz-pending-input.txt  khk-kaz-pending-lex-expected.txt  khk-kaz-pending-morph-expected.txt  khk-kaz-pending-postgen-expected.txt  khk-kaz-pending-postgen-gold.txt  khk-kaz-pending-pretransfer-expected.txt  tests.json
